--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -3237,8 +3237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "1ec4e204-ad9b-413e-9111-7f1fafb31ef9",
+   "execution_count": 130,
+   "id": "eb88213a-dc1d-48ec-9172-176aeee8389b",
    "metadata": {},
    "outputs": [
     {
@@ -3248,13 +3248,13 @@
        "Name: weight, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mammals.nlargest(n = 1, columns = 'speed', keep = 'first')['weight']"
+    "mammals[mammals.speed == mammals.speed.max()].weight"
    ]
   },
   {
