Added a few alternative solutions

--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b0f77446-6155-4de8-a09a-f050f4c59d7a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4dc6de5a-8438-4ecb-a9f0-61722cd608d4",
    "metadata": {},
    "outputs": [],
@@ -1284,6 +1284,16 @@
    "metadata": {},
    "source": [
     "- Rename the cty column to city."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c76a400-d185-4e05-94ff-8f9c91d1406c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mpg.rename(columns = {'cty' : 'city', 'hwy' : 'highway'}, inplace = True)"
    ]
   },
   {
@@ -2881,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "8877b533-ee6b-4480-8540-a4362d81d7cd",
    "metadata": {},
    "outputs": [
@@ -3284,6 +3294,29 @@
    ],
    "source": [
     "str(mammals['specials'].mean().round(3) * 100) + ' %'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5836299a-a260-4b1c-9849-865e62713450",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    0.906542\n",
+       "True     0.093458\n",
+       "Name: specials, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mammals.specials.value_counts(normalize = True)"
    ]
   },
   {
