Added alternative solutions

--- a/advanced_dataframes.ipynb
+++ b/advanced_dataframes.ipynb
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 90,
    "id": "63a86580-6760-406b-b5a0-e46e084c4c23",
    "metadata": {},
    "outputs": [
@@ -1264,14 +1264,13 @@
        "Index: []"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# if the left_on and right_on keywords are specified an error is raised\n",
-    "users.drop(columns = 'role_id').merge(roles.drop(columns = 'id'), how = 'inner')"
+    "users.drop(columns = 'role_id').merge(roles)"
    ]
   },
   {
@@ -1861,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "id": "6e1f1662-17f2-4009-a264-6d2a35f49fd0",
    "metadata": {},
    "outputs": [
@@ -1871,13 +1870,13 @@
        "38"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg.model.unique().size"
+    "mpg.model.nunique()"
    ]
   },
   {
@@ -2421,6 +2420,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b30dc79e-2b9f-4ca7-9a32-4ecbcc84a61c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'honda'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mpg.groupby('manufacturer').average_mileage.mean().idxmax()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b412b920-916e-476d-bf30-ad516bd6b1f9",
    "metadata": {},
@@ -2431,22 +2451,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ee6ba53d-c0c6-4b72-b273-be23b9dd3672",
+   "execution_count": 95,
+   "id": "f9f62f12-0ead-457f-a1f8-45a856ee40bd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Manual: 22.227272727272727\n",
-      " Automatic: 19.130573248407643\n"
+      "Manual: 22.227272727272727\n",
+      "Automatic: 19.130573248407643\n"
      ]
     }
    ],
    "source": [
     "avg_mpg_by_transmission = mpg.groupby('is_automatic').average_mileage.mean()\n",
-    "print(f' Manual: {avg_mpg_by_transmission[False]}\\n Automatic: {avg_mpg_by_transmission[True]}')"
+    "print(f'Manual: {avg_mpg_by_transmission[False]}\\nAutomatic: {avg_mpg_by_transmission[True]}')"
    ]
   },
   {
@@ -3319,6 +3339,148 @@
    ],
    "source": [
     "pd.crosstab(current_titles_by_department.title, current_titles_by_department.dept_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "114684e5-196f-4867-bfba-29a109c8a381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_fa8bb_row3_col1, #T_fa8bb_row3_col5, #T_fa8bb_row3_col6, #T_fa8bb_row4_col0, #T_fa8bb_row4_col2, #T_fa8bb_row4_col3, #T_fa8bb_row4_col4, #T_fa8bb_row4_col7, #T_fa8bb_row4_col8 {\n",
+       "  background-color: yellow;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_fa8bb_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >dept_name</th>\n",
+       "      <th class=\"col_heading level0 col0\" >Customer Service</th>\n",
+       "      <th class=\"col_heading level0 col1\" >Development</th>\n",
+       "      <th class=\"col_heading level0 col2\" >Finance</th>\n",
+       "      <th class=\"col_heading level0 col3\" >Human Resources</th>\n",
+       "      <th class=\"col_heading level0 col4\" >Marketing</th>\n",
+       "      <th class=\"col_heading level0 col5\" >Production</th>\n",
+       "      <th class=\"col_heading level0 col6\" >Quality Management</th>\n",
+       "      <th class=\"col_heading level0 col7\" >Research</th>\n",
+       "      <th class=\"col_heading level0 col8\" >Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >title</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "      <th class=\"blank col3\" >&nbsp;</th>\n",
+       "      <th class=\"blank col4\" >&nbsp;</th>\n",
+       "      <th class=\"blank col5\" >&nbsp;</th>\n",
+       "      <th class=\"blank col6\" >&nbsp;</th>\n",
+       "      <th class=\"blank col7\" >&nbsp;</th>\n",
+       "      <th class=\"blank col8\" >&nbsp;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row0\" class=\"row_heading level0 row0\" >Assistant Engineer</th>\n",
+       "      <td id=\"T_fa8bb_row0_col0\" class=\"data row0 col0\" >68</td>\n",
+       "      <td id=\"T_fa8bb_row0_col1\" class=\"data row0 col1\" >1652</td>\n",
+       "      <td id=\"T_fa8bb_row0_col2\" class=\"data row0 col2\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row0_col3\" class=\"data row0 col3\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row0_col4\" class=\"data row0 col4\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row0_col5\" class=\"data row0 col5\" >1402</td>\n",
+       "      <td id=\"T_fa8bb_row0_col6\" class=\"data row0 col6\" >389</td>\n",
+       "      <td id=\"T_fa8bb_row0_col7\" class=\"data row0 col7\" >77</td>\n",
+       "      <td id=\"T_fa8bb_row0_col8\" class=\"data row0 col8\" >0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row1\" class=\"row_heading level0 row1\" >Engineer</th>\n",
+       "      <td id=\"T_fa8bb_row1_col0\" class=\"data row1 col0\" >627</td>\n",
+       "      <td id=\"T_fa8bb_row1_col1\" class=\"data row1 col1\" >14040</td>\n",
+       "      <td id=\"T_fa8bb_row1_col2\" class=\"data row1 col2\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row1_col3\" class=\"data row1 col3\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row1_col4\" class=\"data row1 col4\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row1_col5\" class=\"data row1 col5\" >12081</td>\n",
+       "      <td id=\"T_fa8bb_row1_col6\" class=\"data row1 col6\" >3405</td>\n",
+       "      <td id=\"T_fa8bb_row1_col7\" class=\"data row1 col7\" >830</td>\n",
+       "      <td id=\"T_fa8bb_row1_col8\" class=\"data row1 col8\" >0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row2\" class=\"row_heading level0 row2\" >Manager</th>\n",
+       "      <td id=\"T_fa8bb_row2_col0\" class=\"data row2 col0\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col1\" class=\"data row2 col1\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col3\" class=\"data row2 col3\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col4\" class=\"data row2 col4\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col5\" class=\"data row2 col5\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col6\" class=\"data row2 col6\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col7\" class=\"data row2 col7\" >1</td>\n",
+       "      <td id=\"T_fa8bb_row2_col8\" class=\"data row2 col8\" >1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row3\" class=\"row_heading level0 row3\" >Senior Engineer</th>\n",
+       "      <td id=\"T_fa8bb_row3_col0\" class=\"data row3 col0\" >1790</td>\n",
+       "      <td id=\"T_fa8bb_row3_col1\" class=\"data row3 col1\" >38816</td>\n",
+       "      <td id=\"T_fa8bb_row3_col2\" class=\"data row3 col2\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row3_col3\" class=\"data row3 col3\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row3_col4\" class=\"data row3 col4\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row3_col5\" class=\"data row3 col5\" >33625</td>\n",
+       "      <td id=\"T_fa8bb_row3_col6\" class=\"data row3 col6\" >9458</td>\n",
+       "      <td id=\"T_fa8bb_row3_col7\" class=\"data row3 col7\" >2250</td>\n",
+       "      <td id=\"T_fa8bb_row3_col8\" class=\"data row3 col8\" >0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row4\" class=\"row_heading level0 row4\" >Senior Staff</th>\n",
+       "      <td id=\"T_fa8bb_row4_col0\" class=\"data row4 col0\" >11268</td>\n",
+       "      <td id=\"T_fa8bb_row4_col1\" class=\"data row4 col1\" >1085</td>\n",
+       "      <td id=\"T_fa8bb_row4_col2\" class=\"data row4 col2\" >9545</td>\n",
+       "      <td id=\"T_fa8bb_row4_col3\" class=\"data row4 col3\" >9824</td>\n",
+       "      <td id=\"T_fa8bb_row4_col4\" class=\"data row4 col4\" >11290</td>\n",
+       "      <td id=\"T_fa8bb_row4_col5\" class=\"data row4 col5\" >1123</td>\n",
+       "      <td id=\"T_fa8bb_row4_col6\" class=\"data row4 col6\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row4_col7\" class=\"data row4 col7\" >9092</td>\n",
+       "      <td id=\"T_fa8bb_row4_col8\" class=\"data row4 col8\" >28797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row5\" class=\"row_heading level0 row5\" >Staff</th>\n",
+       "      <td id=\"T_fa8bb_row5_col0\" class=\"data row5 col0\" >3574</td>\n",
+       "      <td id=\"T_fa8bb_row5_col1\" class=\"data row5 col1\" >315</td>\n",
+       "      <td id=\"T_fa8bb_row5_col2\" class=\"data row5 col2\" >2891</td>\n",
+       "      <td id=\"T_fa8bb_row5_col3\" class=\"data row5 col3\" >3073</td>\n",
+       "      <td id=\"T_fa8bb_row5_col4\" class=\"data row5 col4\" >3551</td>\n",
+       "      <td id=\"T_fa8bb_row5_col5\" class=\"data row5 col5\" >349</td>\n",
+       "      <td id=\"T_fa8bb_row5_col6\" class=\"data row5 col6\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row5_col7\" class=\"data row5 col7\" >2870</td>\n",
+       "      <td id=\"T_fa8bb_row5_col8\" class=\"data row5 col8\" >8903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fa8bb_level0_row6\" class=\"row_heading level0 row6\" >Technique Leader</th>\n",
+       "      <td id=\"T_fa8bb_row6_col0\" class=\"data row6 col0\" >241</td>\n",
+       "      <td id=\"T_fa8bb_row6_col1\" class=\"data row6 col1\" >5477</td>\n",
+       "      <td id=\"T_fa8bb_row6_col2\" class=\"data row6 col2\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row6_col3\" class=\"data row6 col3\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row6_col4\" class=\"data row6 col4\" >0</td>\n",
+       "      <td id=\"T_fa8bb_row6_col5\" class=\"data row6 col5\" >4723</td>\n",
+       "      <td id=\"T_fa8bb_row6_col6\" class=\"data row6 col6\" >1293</td>\n",
+       "      <td id=\"T_fa8bb_row6_col7\" class=\"data row6 col7\" >321</td>\n",
+       "      <td id=\"T_fa8bb_row6_col8\" class=\"data row6 col8\" >0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7fdb2a9dfeb0>"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(current_titles_by_department.title, current_titles_by_department.dept_name).style.highlight_max()"
    ]
   }
  ],
